<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margem"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_lang1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/por"/>
        <RadioButton
            android:id="@+id/rb_lang2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            />
        <RadioButton
            android:id="@+id/rb_lang3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/esp"
            />

    </RadioGroup>

</LinearLayout>