<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_map"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:tag="@string/mapa"
        android:layout_above="@+id/layout_bottom"
        />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <RadioGroup
            android:id="@+id/rg_geometria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rb_pontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pontos"
                android:layout_margin="@dimen/margem"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/rb_linha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linha"
                android:layout_margin="@dimen/margem"
                />

            <RadioButton
                android:id="@+id/rb_poligono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poligono"
                android:layout_margin="@dimen/margem"
                />

        </RadioGroup>

        <ImageButton
            android:id="@+id/ib_pontos"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />

    </LinearLayout>


</RelativeLayout>