<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="3"
    android:layout_margin="@dimen/margem">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:text="@string/file_name"
        android:layout_margin="@dimen/margem_normal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:hint="@string/file_name"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margem_normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/str_separator"
        android:layout_margin="@dimen/margem_normal"/>

    <EditText
        android:layout_width="@dimen/buttons"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:text="@string/default_separator"
        android:layout_margin="@dimen/margem_normal"/>

</GridLayout>