<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margem_grande">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_add_point"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocMarcar"
                    android:layout_margin="@dimen/margem"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_view_points"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margem"
                    android:text="@string/strDocVer"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_mapa"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margem"
                    android:text="@string/strDocMapa"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_remove"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocRemover"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/margem"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_kml"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocExportar"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/margem"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_save"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocSalvar"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/margem"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_right"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocProx"
                    android:layout_margin="@dimen/margem"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margem">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/ic_left"
                    android:layout_margin="@dimen/margem"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDocAnt"
                    android:layout_margin="@dimen/margem"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>